@@ -1,3 +1,8 @@
+2002-11-10  Daniel Elstner  <daniel.elstner@gmx.net>
+
+	* src/mainwindow.cc (on_preferences): Make this strongly exception
+	safe, just to demonstrate how to use std::auto_ptr<> properly :)
+
 2002-11-09  Daniel Elstner  <daniel.elstner@gmx.net>
 
 	* src/mainwindow.cc (on_preferences): If the preferences dialog
